# riot_rest_api

./: CIRS_test.html  CMakeLists.txt  edge_routes.hpp  engine_routes.hpp  engine_service.hpp  main.cpp  node_routes.hpp  open_api_builder.hpp  package_routes.hpp  swagger_ui.hpp
schemas/: package.capnp.c++  package.capnp.h
